--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>JavaEEHomeWork1</groupId>
     <artifactId>javaee</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     
 </project>
