--- a/src/main/java/gwt/client/text/ApplicationConstants.properties
+++ b/src/main/java/gwt/client/text/ApplicationConstants.properties
@@ -1,7 +1,5 @@
-title=Демо-приложение
-login.label.alt=Логин :
-login.placeholder.alt=Введите Ваш логин...
-password.label.alt=Пароль :
-logon.button.alt=Вход
-logon.success=Вход успешен
-form.header=Это пример главной страницы GWT-приложения. Вы можете прикрепить модуль Web Toolkit к любой HTML-странице, которая вам нравится, что упростит добавление функциональности AJAX к существующим страницам без необходимости начинать с нуля.
+form.footer=Сайт работает на стеке технологий JavaEE
+form.footer1=Сайт будет рости просьба не покидать!:)
+form.contact=Автор: Иванов Владислав
+form.title=Insta
+
