--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,12 +14,12 @@
     <url-pattern>/Application/ApplicationService</url-pattern>
   </servlet-mapping>
   <servlet>
-    <servlet-name>remoteLoggerServiceImpl</servlet-name>
-    <servlet-class>com.allen_sauer.gwt.log.server.RemoteLoggerServlet</servlet-class>
+    <servlet-name>LoginService</servlet-name>
+    <servlet-class>gwt.server.LoginServiceImpl</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>remoteLoggerServiceImpl</servlet-name>
-    <url-pattern>/Application/gwt-log</url-pattern>
+    <servlet-name>LoginService</servlet-name>
+    <url-pattern>/Application/LoginService</url-pattern>
   </servlet-mapping>
   <security-role>
     <role-name>*</role-name>
